Refactor release workflow to unify artifact renaming and ensure consistent shell usage

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
         run: dotnet restore src/Diffy/Diffy.csproj
 
       - name: Publish
+        shell: bash
         run: |
           dotnet publish src/Diffy/Diffy.csproj \
             -c Release \
@@ -57,16 +58,10 @@ jobs:
             -p:EnableCompressionInSingleFile=true \
             -o ./publish
 
-      - name: Rename artifact (Unix)
-        if: runner.os != 'Windows'
+      - name: Rename artifact
+        shell: bash
         run: |
           mv ./publish/Diffy${{ matrix.extension }} ./publish/${{ matrix.artifact }}${{ matrix.extension }}
-
-      - name: Rename artifact (Windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          Move-Item ./publish/Diffy${{ matrix.extension }} ./publish/${{ matrix.artifact }}${{ matrix.extension }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
